Update document in database when it's read

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-timeago": "^6.2.1",
     "react-webcam": "^6.0.0",
     "uuid": "^8.3.2"
   },
