--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^9.6.4",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
